Fix: CSS error showing wrong colors

--- a/frontend/css/custom.css
+++ b/frontend/css/custom.css
@@ -8,12 +8,12 @@
   width: 1em;
 }
 
-.indicator-ball, .indicator-ball-success {
+.indicator-ball.indicator-ball-success {
   background-color: #468847;
   border: 1px solid #d6e9c6;
 }
 
-.indicator-ball, .indicator-ball-failure {
+.indicator-ball.indicator-ball-failure {
   background-color: #b94a48;
   border: 1px solid #eed3d7;
 }
